Home Page Finish

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,47 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.blink-cursor {
+    color: transparent;
+    display: inline-block;
+    width: 3px;
+    background-color: transparent;
+    animation: blink 0.8s step-end infinite;
+}
+
+@keyframes blink {
+    from, to {
+        background-color: transparent;
+    }
+    50% {
+        background-color: black;
+    }
+}
+
+@keyframes scale-up {
+    0% {
+      transform: scale(0);
+    }
+    100% {
+      transform: scale(3);
+    }
+  }
+
+  .hover\:after:animate-scale-up:hover:after {
+    animation: scale-up 0.4s ease-out;
+  }
+
+@keyframes fade-in {
+  from {
+    opacity: 0%;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 100%;
+    transform: translateY(0);
+  }
+}
+
+.animate-fade-in {
+  animation: fade-in ease-in-out forwards;
+}
